defined border color as fb attribute

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -272,4 +272,5 @@
     <attr name="fb_seek_bar_color" format="color" />
     <attr name="fb_seek_bar_thumb_color" format="color" />
 
+    <attr name="fb_border_color" format="color" />
 </resources>
