--- a/app/src/main/res/drawable/cell.xml
+++ b/app/src/main/res/drawable/cell.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="#000000"
+        android:color="?fb_border_color"
         android:width="1dp" />
 
     <gradient
