--- a/app/src/main/res/drawable/cell_high_contrast.xml
+++ b/app/src/main/res/drawable/cell_high_contrast.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#000000" />
+        android:color="?fb_border_color" />
 
     <padding
         android:bottom="5dp"
