enhancement: improved high contrast view for geonav snackbar messages

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -273,4 +273,8 @@
     <attr name="fb_seek_bar_thumb_color" format="color" />
 
     <attr name="fb_border_color" format="color" />
+
+    <!-- geonav snackbar view reference -->
+    <attr name="fb_geonav_snackbar_view" format="reference" />
+
 </resources>
