--- a/app/src/main/res/layout/geonav_snackbar_layout.xml
+++ b/app/src/main/res/layout/geonav_snackbar_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/cell_geonav_snackbar"
+    android:background="?fb_geonav_snackbar_view"
     android:padding="4dp">
 
     <ImageButton style="@style/Widget.AppCompat.Button.Borderless"
