--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -186,6 +186,7 @@
 
         <item name="buttonStyle">@style/ButtonStyle.HighContrast</item>
         <item name="imageButtonStyle">@style/ButtonStyle.HighContrast</item>
+        <item name="floatingActionButtonStyle">@style/FloatingActionButtonStyle.HighContrast</item>
 
         <item name="fb_seek_bar">@drawable/high_contrast_seek_bar</item>
 
