--- a/app/src/main/res/layout/dialog_export.xml
+++ b/app/src/main/res/layout/dialog_export.xml
@@ -31,7 +31,7 @@
                 android:text="@string/export_format_database" />
 
             <CheckBox
-                android:id="@+id/formatExcel"
+                android:id="@+id/formatTable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/export_format_table" />
