--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -14,35 +14,57 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/minusBtn"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:background="?fb_round_button_background"
+            android:layout_margin="8dp"
             android:gravity="center|center_vertical"
-            android:text="-1"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold"
             android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/addBtn"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/trait_counter_minus_content_description" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="15dp"
+            android:text="-1"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/minusBtn"
+            app:layout_constraintEnd_toEndOf="@id/minusBtn"
+            app:layout_constraintStart_toStartOf="@id/minusBtn"
+            app:layout_constraintTop_toTopOf="@id/minusBtn"
             tools:ignore="HardcodedText" />
 
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/addBtn"
+            android:layout_margin="8dp"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:background="?fb_round_button_background"
-            android:gravity="center"
-            android:text="+1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/minusBtn"
             app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/trait_counter_plus_content_description" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="15dp"
+            android:text="+1"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/addBtn"
+            app:layout_constraintEnd_toEndOf="@id/addBtn"
+            app:layout_constraintStart_toStartOf="@id/addBtn"
+            app:layout_constraintTop_toTopOf="@id/addBtn"
             tools:ignore="HardcodedText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
