--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -22,42 +22,36 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/minusDateBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="65dp"
-                android:layout_margin="10dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:gravity="center|center_vertical"
-                android:minWidth="@dimen/button_default_width"
-                android:text="-1"
-                android:textSize="@dimen/text_size_xlarge" />
+                android:contentDescription="@string/trait_date_minus_content_description"
+                android:src="@drawable/minus" />
 
-            <ImageButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/enterBtn"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:background="?fb_round_button_background"
-                android:gravity="center"
-                android:padding="10dp"
-                android:scaleType="fitXY"
+                android:layout_margin="8dp"
                 android:src="@drawable/trait_date_save"
                 android:contentDescription="@string/trait_date_save_button_content_description" />
 
-            <Button
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/addDateBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="65dp"
-                android:layout_margin="10dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:text="+1"
-                android:textSize="@dimen/text_size_xlarge" />
+                android:contentDescription="@string/trait_date_add_content_description"
+                android:src="@drawable/ic_plus" />
 
         </LinearLayout>
 
-        <ImageButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/trait_date_calendar_visibility_btn"
             android:layout_width="110dp"
             android:layout_height="55dp"
