--- a/app/src/main/res/layout/trait_label_print.xml
+++ b/app/src/main/res/layout/trait_label_print.xml
@@ -14,16 +14,12 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/connectPrinterButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/custom_round_button"
-            android:gravity="center"
-            android:padding="10dp"
-            android:scaleType="fitXY"
+            android:layout_margin="8dp"
             android:src="@drawable/connection"
             android:contentDescription="@string/trait_labelprint_connect_button_description" />
 
@@ -38,16 +34,12 @@
             android:scaleType="centerInside"
             android:contentDescription="@string/trait_labelprint_preview_description" />
 
-        <ImageButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/printLabelButton"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/custom_round_button"
-            android:gravity="center"
-            android:padding="10dp"
-            android:scaleType="fitXY"
+            android:layout_margin="8dp"
             android:src="@drawable/ic_trait_labelprint"
             android:contentDescription="@string/trait_labelprint_print_button_description" />
     </LinearLayout>
