--- a/app/src/main/res/values/styles_widgets.xml
+++ b/app/src/main/res/values/styles_widgets.xml
@@ -109,6 +109,8 @@
         <item name="borderWidth">2dp</item>
         <item name="android:backgroundTint">?fb_color_primary</item>
         <item name="backgroundTint">?fb_icon_fill_tint</item>
+        <item name="android:elevation">0dp</item>
+        <item name="elevation">0dp</item>
     </style>
 
     <!-- Preference Search bar card style, inherits android:widget style -->
