--- a/app/src/main/res/values/directories.xml
+++ b/app/src/main/res/values/directories.xml
@@ -8,6 +8,7 @@
     <string name="dir_field_import" translatable="false">field_import</string>
     <string name="dir_field_export" translatable="false">field_export</string>
     <string name="dir_geonav" translatable="false">geonav</string>
+    <string name="dir_field_audio_log_traits_zip" translatable="false">field_audio_log_traits_zip</string>
     <string name="dir_database" translatable="false">database</string>
     <string name="dir_updates" translatable="false">updates</string>
     <string name="dir_archive" translatable="false">archive</string>
