improved fresh-install theme theme switch is now asked in storage definer as well on startup, breaking: non-eink default themed devices will see a non-green "define", "migrate" buttons now (this can be fixed but is a phenolib issue) minor refactoring

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -190,6 +190,7 @@
         <item name="fb_seek_bar">@drawable/high_contrast_seek_bar</item>
 
         <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:windowDisablePreview">true</item>
         <item name="android:windowEnterAnimation">@null</item>
         <item name="android:windowExitAnimation">@null</item>
         <item name="android:windowHideAnimation">@null</item>
