--- a/app/src/main/res/values/styles_widgets.xml
+++ b/app/src/main/res/values/styles_widgets.xml
@@ -113,6 +113,16 @@
         <item name="elevation">0dp</item>
     </style>
 
+    <!-- fab styling, used in the trait editor activity -->
+    <style name="FloatingActionButtonStyle.TraitCreatorButton">
+        <!--        <item name="backgroundTint">?attr/fb_color_primary</item>-->
+        <item name="borderWidth">2dp</item>
+        <item name="android:backgroundTint">?fb_trait_creator_button_color</item>
+        <item name="backgroundTint">?fb_icon_fill_tint</item>
+        <item name="android:elevation">0dp</item>
+        <item name="elevation">0dp</item>
+    </style>
+
     <!-- Preference Search bar card style, inherits android:widget style -->
     <style name="CardViewStyle" parent="Base.CardView" />
 
