increased primary/secondary collect activity textviews text size to match infobars and trait spinner

--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -59,7 +59,7 @@
             android:gravity="right"
             android:paddingRight="10dp"
             android:text="@string/search_results_dialog_range"
-            android:textSize="@dimen/text_size_xlarge"
+            android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
 
         <TextView
@@ -69,7 +69,7 @@
             android:gravity="right"
             android:paddingRight="10dp"
             android:text="@string/search_results_dialog_plot"
-            android:textSize="@dimen/text_size_xlarge"
+            android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -96,7 +96,7 @@
             android:singleLine="true"
             android:text=""
             android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
+            android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
 
         <TextView
@@ -108,7 +108,7 @@
             android:singleLine="true"
             android:text=""
             android:textColor="#000000"
-            android:textSize="@dimen/text_size_xlarge"
+            android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold"
             android:visibility="gone" />
 
