fixed categorical buttons not showing there selected state

--- a/app/src/main/res/layout/trait_multicat_button.xml
+++ b/app/src/main/res/layout/trait_multicat_button.xml
@@ -8,4 +8,5 @@
     android:id="@+id/multicatButton"
     android:gravity="center"
     android:singleLine="true"
+    android:background="@drawable/categorical_button_selected"
     android:text="@string/traits_format_multicategorical" />
