--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -276,6 +276,8 @@
 
     <attr name="fb_trait_creator_button_color" format="color" />
 
+    <attr name="fb_categorical_button_selected_color" format="color" />
+
     <!-- geonav snackbar view reference -->
     <attr name="fb_geonav_snackbar_view" format="reference" />
 
