--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,8 @@
         <item name="fb_geonav_snackbar_view">@drawable/cell_geonav_snackbar</item>
         <item name="fb_trait_creator_button_color">@color/light_gray</item>
 
+        <item name="fb_categorical_button_selected_color">?attr/fb_color_primary</item>
+
         <!-- these are used in material design components -->
         <item name="android:textColorPrimary">?attr/fb_color_text_dark</item>
         <item name="android:textColorSecondary">?attr/fb_color_text_dark</item>
@@ -179,6 +181,8 @@
 
         <item name="fb_geonav_snackbar_view">@drawable/cell_geonav_snackbar_high_contrast</item>
         <item name="fb_trait_creator_button_color">@color/high_contrast_button_color_pressed</item>
+
+        <item name="fb_categorical_button_selected_color">@color/GRAY</item>
 
         <item name="colorPrimary">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryDark">?attr/fb_color_primary_dark</item>
