--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,7 @@
         <item name="fb_border_color">@color/main_border</item>
         <item name="fb_geonav_snackbar_view">@drawable/cell_geonav_snackbar</item>
         <item name="fb_trait_creator_button_color">@color/light_gray</item>
+        <item name="fb_preferences_horizontal_break_color">@color/TRANSPARENT</item>
 
         <item name="fb_categorical_button_selected_color">?attr/fb_color_primary</item>
 
@@ -184,6 +185,7 @@
 
         <item name="fb_categorical_button_selected_color">@color/GRAY</item>
 
+        <item name="fb_preferences_horizontal_break_color">?fb_color_primary_dark</item>
         <item name="colorPrimary">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryDark">?attr/fb_color_primary_dark</item>
         <item name="colorPrimaryVariant">?attr/fb_color_primary</item>
