--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,8 +2,9 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.bytehamster.lib.preferencesearch.SearchPreference
-        android:key="searchPreference" />
+    <com.bytehamster.lib.preferencesearch.SearchPreference android:key="searchPreference" />
+
+    <EditTextPreference android:layout="@layout/view_preferences_horizontal_break" />
 
     <Preference
         android:icon="@drawable/ic_pref_general"
