--- a/app/src/main/res/layout/trait_audio.xml
+++ b/app/src/main/res/layout/trait_audio.xml
@@ -29,9 +29,10 @@
             android:text="Tap To Start" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.TraitButtons"
             android:id="@+id/record"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/fb_trait_fab_size"
+            android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_gravity="center"
             android:layout_margin="8dp"
             android:contentDescription="@string/trait_audio_button_content_description"
