--- a/app/src/main/res/layout/trait_photo.xml
+++ b/app/src/main/res/layout/trait_photo.xml
@@ -34,9 +34,10 @@
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.TraitButtons"
             android:id="@+id/capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/fb_trait_fab_size"
+            android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_gravity="center"
             android:layout_margin="8dp"
             android:src="@drawable/ic_trait_camera"
