--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -15,13 +15,12 @@
         android:fitsSystemWindows="true">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.TraitButtons"
             android:id="@+id/minusBtn"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="@dimen/fb_trait_fab_size"
+            android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_margin="8dp"
             android:gravity="center|center_vertical"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold"
             android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/addBtn"
@@ -44,10 +43,11 @@
             tools:ignore="HardcodedText" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.TraitButtons"
             android:id="@+id/addBtn"
             android:layout_margin="8dp"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="@dimen/fb_trait_big_fab_size"
+            android:layout_height="@dimen/fb_trait_big_fab_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/minusBtn"
