--- a/app/src/main/res/layout/trait_go_pro.xml
+++ b/app/src/main/res/layout/trait_go_pro.xml
@@ -55,12 +55,13 @@
             app:layout_constraintTop_toBottomOf="@id/go_pro_pv" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/FloatingActionButtonStyle.TraitButtons"
             android:visibility="visible"
             android:contentDescription="@string/go_pro_frag_connect_btn_content_description"
             android:src="@drawable/ic_connection"
             android:id="@+id/go_pro_connect_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/fb_trait_fab_size"
+            android:layout_height="@dimen/fb_trait_fab_size"
             android:layout_margin="8dp"
             app:layout_constraintTop_toBottomOf="@id/go_pro_rv"
             app:layout_constraintStart_toStartOf="parent"
