bugfix: made range box text views have same text size

--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -95,7 +95,6 @@
             android:inputType="textVisiblePassword"
             android:singleLine="true"
             android:text=""
-            android:textColor="#000000"
             android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
 
@@ -107,7 +106,6 @@
             android:padding="0dp"
             android:singleLine="true"
             android:text=""
-            android:textColor="#000000"
             android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold"
             android:visibility="gone" />
@@ -121,8 +119,7 @@
             android:inputType="textVisiblePassword"
             android:singleLine="true"
             android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
+            android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold" />
 
         <TextView
@@ -132,8 +129,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text=""
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_xlarge"
+            android:textSize="?attr/fb_title_text_size"
             android:textStyle="bold"
             android:visibility="gone" />
     </LinearLayout>
