--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,7 +72,7 @@
         <item name="toolbarStyle">@style/AppToolbar</item>
         <item name="actionBarTheme">@style/AppToolbar</item>
         <item name="checkboxStyle">@style/CheckBoxStyle</item>
-        <item name="alertDialogTheme">@style/AlertDialogStyle</item>
+        <item name="alertDialogTheme">@style/AppAlertDialog</item>
         <item name="actionOverflowButtonStyle">@style/OverFlowStyle</item>
         <item name="actionOverflowMenuStyle">@style/OverFlowMenuStyle</item>
         <item name="progressBarStyle">@style/ProgressBarStyle</item>
